Added page template support

--- a/data/test_text.html
+++ b/data/test_text.html
@@ -1,4 +1,31 @@
-__NOTOC__
+<!doctype html>
+<html lang="ru">
+	<head>
+		<title>Unnamed</title>
+		<style type="text/css">
+			body {
+				font-family: Helvetica, Tahoma;
+			}
+			
+			article {
+				width: 1100px;
+				margin: auto;
+			}
+			
+			.title {
+				padding-bottom: 4px;
+				border-bottom: solid 1px gray;
+			}
+		</style>
+	</head>
+	<body>
+		<article>
+			<h1 class="title">
+				Unnamed
+			</h1>
+			
+			<section>
+				__NOTOC__
 
 aboutо сетевом форсед-мемео бывшем нанопрезиденте РоссииМедведев
 архив
@@ -218,3 +245,8 @@ Shall be lifted — Nevermore!<a href="#Эдгар Аллан По">Эдгар 
 <a href="#w:Медвед">w:Медвед</a>
 <a href="#ae:Preved">ae:Preved</a>
 <a href="#kym:preved-medved">kym:preved-medved</a>
+
+			</section>
+		</article>
+	</body>
+</html>
