Implemented wiki template element handling

--- a/data/template.html
+++ b/data/template.html
@@ -12,9 +12,24 @@
 				margin: auto;
 			}
 			
+			article p {
+				line-height: 1.1;
+			}
+			
 			.title {
 				padding-bottom: 4px;
 				border-bottom: solid 1px gray;
+			}
+			
+			div.template {
+				background-color: #efefef;
+				margin: 4px 0px;
+			}
+			
+			blockquote {
+				padding-top: 5px;
+				padding-bottom: 5px;
+				border: 1px solid lightgray;
 			}
 		</style>
 	</head>
