Реализация базового приложения просмотра статей

--- a/data/test_text.html
+++ b/data/test_text.html
@@ -27,7 +27,8 @@
 			}
 			
 			blockquote {
-				padding: 5px;
+				padding-top: 5px;
+				padding-bottom: 5px;
 				border: 1px solid lightgray;
 			}
 		</style>
