Добавлено разбиение текста на абзацы

--- a/LurkViewer/Resources/Raw/template.html
+++ b/LurkViewer/Resources/Raw/template.html
@@ -8,11 +8,9 @@
 			}
 			
 			article {
-				width: 1100px;
+				min-width: 360px;
+				max-width: 1100px;
 				margin: auto;
-			}
-			
-			article {
 				line-height: 1.5;
 			}
 			
@@ -30,6 +28,10 @@
 				padding-top: 5px;
 				padding-bottom: 5px;
 				border: 1px solid lightgray;
+			}
+			
+			p {
+				text-indent: 20px;
 			}
 		</style>
 	</head>
