--- a/data/template.html
+++ b/data/template.html
@@ -31,6 +31,10 @@
 				padding-bottom: 5px;
 				border: 1px solid lightgray;
 			}
+			
+			p {
+				text-indent: 20px;
+			}
 		</style>
 	</head>
 	<body>
