Small fixes, added remove from favorites action

--- a/LurkViewer/Resources/Raw/template.html
+++ b/LurkViewer/Resources/Raw/template.html
@@ -29,8 +29,7 @@
 			}
 			
 			blockquote {
-				padding-top: 5px;
-				padding-bottom: 5px;
+				padding: 5px 2px;
 				border: 1px solid lightgray;
 			}
 			
