--- a/LurkViewer/Resources/Raw/template.html
+++ b/LurkViewer/Resources/Raw/template.html
@@ -36,6 +36,11 @@
 			p {
 				text-indent: 20px;
 			}
+
+			pre {
+				white-space: pre-wrap;
+				word-wrap: break-word;
+			}
 		</style>
 		
 		<script type="text/javascript">
